@@ -1,16 +1,7 @@
-﻿@echo off
-echo Building main project...
-call mvn clean package -DskipTests
-if %ERRORLEVEL% NEQ 0 (
-    echo.
-    echo ❌ Maven build failed.
-    pause
-    exit /b %ERRORLEVEL%
-)
+@echo off
+echo Compiling and running FastOverlay Benchmark...
+call mvn -q clean install -DskipTests
+if %ERRORLEVEL% neq 0 exit /b %ERRORLEVEL%
 
-echo.
-echo Running Benchmark...
-cd examples\Benchmark
-call mvn compile exec:java
-cd ..\..
+java --enable-native-access=ALL-UNNAMED -cp "target\fastoverlay-0.1.0.jar" fastoverlay.FastOverlayBenchmark
 pause
